Added blog to my nav

--- a/workingforyou/index.html
+++ b/workingforyou/index.html
@@ -63,8 +63,8 @@
           <li><a  class="smooth" href="#work">Design &amp; Code</a></li>
           <li><a  class="smooth" href="#random">Random Projects</a></li>
           <li><a  class="smooth" href="#life">What she does</a></li>
-          <li><a  class="smooth" href="#contact">Stay Connected</a></li>
-          <!-- <li><a  href="/bloggingsometimes">Blog</a></li> -->
+          <li><a  class="smooth" href="#contact">Staying Connected</a></li>
+          <li><a  href="http://www.designandhappiness.com/" target="_blank">Blogging</a></li>
         </ul>
       </div>
     </div>
