--- a/workingforyou/index.html
+++ b/workingforyou/index.html
@@ -64,7 +64,6 @@
           <li><a  class="smooth" href="#random">Random Projects</a></li>
           <li><a  class="smooth" href="#life">What she does</a></li>
           <li><a  class="smooth" href="#contact">Staying Connected</a></li>
-          <li><a  href="http://www.designandhappiness.com/" target="_blank">Blogging</a></li>
         </ul>
       </div>
     </div>
@@ -176,7 +175,7 @@
 
           <a href="/work/letterpest.html">
             <div class="span3 workThumb">
-              <a href="http://letterpest.com" target="_blank">
+              <a href="http://letterpest.herokuapp.com/" target="_blank">
                 <img src="/img/work_thumb_letterpest.png" />
               </a>        
               <div class="caption">Designed a product site for Letterpest and a mobile site that allows people to upload Letterpress boards and get possible words.</div>
@@ -216,7 +215,9 @@
           </div>
 
           <div class="span3 workThumb"> 
-            <img src="/img/work_thumb_flag_tag.png" /> 
+            <a href="http://codeforamerica.org/" target="_blank">
+              <img src="/img/work_thumb_flag_tag.png" /> 
+            </a>
             <div class="caption">Designed an icon for Code for America.</div>              
           </div>
 
@@ -252,7 +253,8 @@
 
           <div class="span3 workThumb">
             <a href="http://us2.campaign-archive1.com/?u=d9acf2a4c694efbd76a48936f&id=deb4dba3d4" target="_blank">
-            <img src="/img/work_thumb_meta.png" />
+              <img src="/img/work_thumb_meta.png" />
+            </a>
             <div class="caption">Designed a newsletter for Code for America. It's featured on MailChimp's inspiration site and MailChimp for nonprofits site</div>                
           </div>
 
@@ -282,7 +284,10 @@
               <p>My last name is 15 letters long, it's Thai, spelled phonetically, and pronounced like <a class="lastname"onmouseover="sound.play()" onclick="sound.play()">this</a>.</p>
               <p>I live in San Francisco, but I'm originally from Santa Monica, CA.</p>
               <p>I love to design and code things.</p>
-              <p>I am currently the Designer in Residence at <a href="http://codeforamerica.org" target="_blank">Code for America</a>.</p>
+              <p>I was a former fellow and Designer in Residence at <a href="http://codeforamerica.org" target="_blank">Code for America</a>.</p>
+              <p>I am currently a freelance designer and front-end dev.</p>
+              <p>I just opened an <a href="https://www.etsy.com/shop/designandhappiness" target="_blank">Etsy store</a>.</p>
+              <p>I love to <a href="http://www.designandhappiness.com/" target="_blank">blog</a> about random things sometimes.</p> 
               <p>I majored in Economics and still love studying behavioral economics.</p>
               <p>I love puppies and wished my landlord would let me have one at my apartment, but for now I <a href="http://instagram.com/puppymapper" target="_blank">map other people's puppies</a>.</p>
               <p>I believe in doing what you love, and that includes my work.</p>
