--- a/workingforyou/index.html
+++ b/workingforyou/index.html
@@ -284,9 +284,9 @@
               <p>My last name is 15 letters long, it's Thai, spelled phonetically, and pronounced like <a class="lastname"onmouseover="sound.play()" onclick="sound.play()">this</a>.</p>
               <p>I live in San Francisco, but I'm originally from Santa Monica, CA.</p>
               <p>I love to design and code things.</p>
+              <p>I am currently freelancing.</p>
               <p>I was a former fellow and Designer in Residence at <a href="http://codeforamerica.org" target="_blank">Code for America</a>.</p>
-              <p>I am currently a freelance designer and front-end dev.</p>
-              <p>I just opened an <a href="https://www.etsy.com/shop/designandhappiness" target="_blank">Etsy store</a>.</p>
+              <p>I have an <a href="https://www.etsy.com/shop/designandhappiness" target="_blank">Etsy store</a>.</p>
               <p>I love to <a href="http://www.designandhappiness.com/" target="_blank">blog</a> about random things sometimes.</p> 
               <p>I majored in Economics and still love studying behavioral economics.</p>
               <p>I love puppies and wished my landlord would let me have one at my apartment, but for now I <a href="http://instagram.com/puppymapper" target="_blank">map other people's puppies</a>.</p>
