Updated language of one of one of my random projects

--- a/workingforyou/index.html
+++ b/workingforyou/index.html
@@ -193,7 +193,7 @@
             <a href="http://spacepong.meteor.com/" target="_blank">
               <img src="/img/work_thumb_spacepong.png" />
             </a>              
-            <div class="caption">Designed and helped developed a version of pong in space.</div>
+            <div class="caption">Designed and helped develop a version of pong in space.</div>
           </div>
 
           <div class="span3 workThumb"> 
