Added link to github repo in the footer

--- a/workingforyou/index.html
+++ b/workingforyou/index.html
@@ -353,7 +353,7 @@
     </div>
 
     <footer>
-      <p>© 2013 Angel Kittiyachavalit<br /><span>Made with love in San Francisco, CA</span></p>
+      <p>© 2013 Angel Kittiyachavalit<br /><span>Designed and <a href="https://github.com/akit/angellov.es" target="_blank">developed</a> with love by Angel in San Francisco, CA</span></p>
     </footer>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
