Updated dates on resume

--- a/resumes/index.html
+++ b/resumes/index.html
@@ -68,7 +68,7 @@
                 <li>
                   <h3>Designer in Residence</h3>
                   <h4><a href="http://codeforamerica.org" target="_blank">Code for America</a>, San Francisco, CA</h4>
-                  <p class="when">December 2012 - present</p>
+                  <p class="when">December 2012 - December 2013</p>
                   <p>I designed marketing material for all of the 5 programs of Code for America as well as mentored fellows with their projects.</p>
                 </li>
 
