Updated resume and added a printable version

--- a/resumes/index.html
+++ b/resumes/index.html
@@ -28,84 +28,81 @@
         <div class="row">
           <div class="span12">
             <p class="goback"><a href="/workingforyou/">&larr; Go back to my portfolio</a></p>
-            <h1>Angel Kittiyachavalit</h1>
           </div>
         </div>
 
-          <div class="row">
-            <div class="span4">
-              <ul class="unstyled">
-                <li>
-                  <h2>Objective</h2>
-                  <p>I'm a freelance Visual/UX Designer and sometimes front-end developer trying to figure out what's next for me. I am interested in making products that improve people's lives and make them smile. I believe in living what you love, and that includes my work. I would love to get my creative juices flowing and collaboratively work with a design team focusing on great user experiences.</p>
-                </li>
+        <div class="row">
+          <div class="span4">
+            <img src="/img/hi_circle.png" /><h1>I'M ANGEL<br />KITTIYACHAVALIT</h1>
 
-                <li>
-                  <h2>Skills</h2>
-                  <p>Visual design, UI/UX design, Adobe Suite, HTML, CSS, Javascript, rock climbing, photography, making greeting cards, laughing, and making name tags.</p>
-                </li>
+            <ul class="unstyled objective">
+              <li>
+                <p>I'm a freelance Visual/UX Designer and sometimes front-end developer trying to figure out what's next for me. I am interested in making products that improve people's lives and make them smile. I believe in living what you love, and that includes my work. I would love to get my creative juices flowing and collaboratively work with a design team focusing on great experiences.</p>
+                <ul class="icons">
+                  <li><a class="icons-print" href="/img/angel_kittiyachavalit_resume_0314.pdf"> &nbsp;PRINTABLE RESUME</a></li>
+                  <li><a class="icons-portfolio" href="/workingforyou/"> &nbsp;ANGELLOV.ES</a></li>
+                  <li><a class="icons-twitter" href="http://twitter.com/angelk" target="_blank"> &nbsp;@ANGELK</a></li>
+                  <li><a class="icons-mail" href="mailto:angel.kittiyachavalit@gmail.com"> &nbsp;ANGEL.KITTIYACHAVALIT@GMAIL.COM</a></li>
+                </ul>
+              </li>
 
-                <li class="education">
-                  <h2>Education</h2>
-                  <p>University of CA, Berkeley</p>
-                  <p>B.A., Economics</p>
-                  <p class="graduated">August 2008</p>
-                </li>
+              <li>
+                <h2>Skills</h2>
+                <p>Visual design, UI/UX design, Adobe Suite, HTML, CSS, Javascript, rock climbing, photography, making greeting cards, laughing, and making name tags.</p>
+              </li>
 
-              </ul>
-            </div>
-            <div class="experience offset1 span7">
-              <h2>Work Experience</h2>
-              <ul class="unstyled">
+              <li class="education">
+                <h2>Education</h2>
+                <h3>University of CA, Berkeley</h3>
+                <p>B.A., Economics</p>
+                <p class="when">August 2008</p>
+              </li>
 
-                <li>
-                  <h3>Freelance Designer</h3>
-                  <h4><a href="http://angellov.es/" target="_blank">Design &amp; Happiness Studio</a>, San Francisco, CA</h4>
-                  <p class="when">October 2009 - Present</p>
-                  <p>I do graphic design, web design, UX/UI, and front-end development for various clients.</p>
-                </li>
+              <li class="awards">
+                <h2>Awards</h2>
+                <h3><a href="https://designchallenge.mwomen.org/en/finalists" target="_blank">GSMA mWomen Design Challenge</a><br />Grand Prize Winner</h3>
+                <p class="when">February 2013</p>
+              </li>
 
-                <li>
-                  <h3>Designer in Residence</h3>
-                  <h4><a href="http://codeforamerica.org" target="_blank">Code for America</a>, San Francisco, CA</h4>
-                  <p class="when">December 2012 - December 2013</p>
-                  <p>I designed marketing material for all of the 5 programs of Code for America as well as mentored fellows with their projects.</p>
-                </li>
+            </ul>
+          </div>
+          <div class="experience offset1 span7">
+            <h2>Work Experience</h2>
+            <ul class="unstyled">
 
-                <li>
-                  <h3>2012 Fellow</h3>
-                  <h4><a href="http://codeforamerica.org" target="_blank">Code for America</a>, San Francisco, CA</h4>
-                  <p class="when">January 2012 - November 2012</p>
-                  <p>I worked for the city of Chicago, where I was in charge of designing and performing user testing applications that dealt with 311 data. I also helped with front-end development. In addition to Chicago, I also helped design Honolulu Answers and other material for Code for America as a whole that included a newsletter template, the initial site for their Accelerator program, and an icon known as the flag tag.</p>
-                </li>
+              <li>
+                <h3>Freelance Designer</h3>
+                <h4><a href="http://angellov.es/" target="_blank">Design &amp; Happiness Studio</a>, San Francisco, CA</h4>
+                <p class="when">October 2009 - Present</p>
+                <p>I do graphic design, web design, UX/UI design, and front-end development for various clients.</p>
+              </li>
 
-                <li>
-                  <h3>User Experience Designer</h3>
-                  <h4><a href="http://shopittome.com" target="_blank">Shop It To Me</a>, San Francisco, CA</h4>
-                  <p class="when">January 2010 - December 2011</p>
-                  <p>As the sole designer, I designed new products, experiments and various marketing collateral from web to print that impacted over 3 million users. Additionally, I started our user testing program. I conducted several user testing sessions. I work closely with the CEO and Product Manager to take action from our users’ feedback. Besides user testing, I implemented a number of other design methods including developing personas, wireframing, paper prototyping, interactive brainstorming as well as creating several iterations of mockups in an agile environment.</p>
-                </li>
+              <li>
+                <h3>Designer in Residence</h3>
+                <h4><a href="http://codeforamerica.org" target="_blank">Code for America</a>, San Francisco, CA</h4>
+                <p class="when">December 2012 - December 2013</p>
+                <p>I designed marketing material for all of the 5 programs of Code for America as well as mentored fellows with their projects.</p>
+              </li>
 
+              <li>
+                <h3>2012 Fellow</h3>
+                <h4><a href="http://codeforamerica.org" target="_blank">Code for America</a>, San Francisco, CA</h4>
+                <p class="when">January 2012 - November 2012</p>
+                <p>I worked for the city of Chicago, where I was in charge of designing and performing the user testing of web applications that dealt with 311 data. I also helped with front-end development. In addition to Chicago, I also helped design Honolulu Answers and other material for Code for America as a whole that included a newsletter template, the initial site for their Accelerator program, and an icon known as the flag tag.</p>
+              </li>
 
-                <li>
-                  <h3>Designer</h3>
-                  <h4><a href="http://blupint.com/" target="_blank">BluPint</a>, San Francisco, CA</h4>
-                  <p class="when">November 2009 - May 2010</p>
-                  <p>I worked closely with the founders in strategizing and designing material for our current and perspective clients that included Dockers, East West Clinic, and v399. I designed everything from proposal decks to Facebook pages.</p>
-                </li>
+              <li>
+                <h3>User Experience Designer</h3>
+                <h4><a href="http://shopittome.com" target="_blank">Shop It To Me</a>, San Francisco, CA</h4>
+                <p class="when">January 2010 - December 2011</p>
+                <p>As the sole designer, I designed new products, experiments, and various marketing collateral from web to print that impacted over 3 million users. Additionally, I started their user testing program. I conducted several user testing sessions. I worked closely with the CEO and Product Manager to take action from users’ feedback. Besides user testing, I implemented a number of other design methods including developing personas, paper prototyping, wireframing, interactive brainstorming as well as creating several iterations of mockups in an agile environment.</p>
+              </li>
 
-                <li>
-                  <h3>Marketing Intern</h3>
-                  <h4>ReadyMade Magazine, Berkeley, CA</h4>
-                  <p class="when">October 2008 - January 2009</p>
-                  <p>I drafted added value proposals for various companies including Glade, Wyndam, and CA Grape Commission. I also created PowerPoint presentations to recap marketing events as well as researched and proofed the launch of Etsy/ReadyMade Micro-site.</p>
-                </li>
+              <li class="references">References available upon request.</li>
 
-                <li>References available upon request.</li>
-
-              </ul>
-            </div>
-           </div> 
+            </ul>
+          </div>
+        </div> 
 
       </div>
     </div>
