--- a/workingforyou/index.html
+++ b/workingforyou/index.html
@@ -289,7 +289,7 @@
               <p>I have an <a href="https://www.etsy.com/shop/designandhappiness" target="_blank">Etsy store</a>.</p>
               <p>I love to <a href="http://www.designandhappiness.com/" target="_blank">blog</a> about random things sometimes.</p> 
               <p>I majored in Economics and still love studying behavioral economics.</p>
-              <p>I love puppies and wished my landlord would let me have one at my apartment, but for now I <a href="http://instagram.com/puppymapper" target="_blank">map other people's puppies</a>.</p>
+              <p>I love puppies and while I don't have one yet, I <a href="http://instagram.com/puppymapper" target="_blank">map other people's pups</a>.</p>
               <p>I believe in doing what you love, and that includes my work.</p>
             </div>
           </div>
