Deleted broken link

--- a/workingforyou/index.html
+++ b/workingforyou/index.html
@@ -155,7 +155,7 @@
         <div class="row worksections">
           <div class="span4 workdescription">
             <h2>Sahel Shake</h2>
-            <p>Designed mobile interfaces targeted towards women in developing markets for the <a href="https://designchallenge.mwomen.org/en/challenge/mwomen-design-challenge" target="_blank">GSMA mWomen Design Challenge</a>. My teammates and I won $20,000 and a trip to Barcelona to receive the award.</p>
+            <p>Designed mobile interfaces targeted towards women in developing markets for the GSMA mWomen Design Challenge. My teammates and I won $20,000 and a trip to Barcelona to receive the award.</p>
             <a href="http://www.gsma.com/mobilefordevelopment/sahel-shake-wins-grand-prize-in-gsma-mwomen-design-challenge" target="_blank">Learn more about this challenge &rarr;</a>
           </div>
           <div class="span8">
