--- a/workingforyou/index.html
+++ b/workingforyou/index.html
@@ -163,6 +163,30 @@
           </div>
         </div>
 
+        <div class="row worksections">
+          <div class="span4 workdescription">
+            <h2>Letterpest</h2>
+            <p>Designed a product and mobile site that allows people to upload <a href="http://www.atebits.com/letterpress/" target="_blank">Letterpress</a> boards and get all the possible words to beat your friends.</p>
+         <!--    <a href="/letterpest/" target="_blank">Learn more about this project &rarr;</a><br /> -->
+            <a href="http://letterpest.herokuapp.com/" target="_blank">View this site live &rarr;</a>
+          </div>
+          <div class="span8">
+            <img src="/img/letterpest_wmobile.png" />
+          </div>
+        </div>
+
+        <div class="row worksections">
+          <div class="span4 workdescription">
+            <h2>Mutini.us</h2>
+            <p>Designed a mobile transit app for a transit hackathon and won 2nd place. Find out when the next bus is coming near you.</p>
+           <!--  <a href="/mutini/" target="_blank">Learn more about this project &rarr;</a><br /> -->
+            <a href="http://mutini.us/" target="_blank">View this site live &rarr;</a><br />
+            <a href="https://github.com/boundsj/mutinius" target="_blank">View the code</a>
+          </div>
+          <div class="span8">
+            <img src="/img/mutini_mobile.png" />
+          </div>
+        </div>
 
       </div>
     </div>
@@ -171,16 +195,8 @@
       <div class="container">
 
         <h2>Fun Random Projects</h2>
-        <div class="row work"> 
 
-          <a href="/work/letterpest.html">
-            <div class="span3 workThumb">
-              <a href="http://letterpest.herokuapp.com/" target="_blank">
-                <img src="/img/work_thumb_letterpest.png" />
-              </a>        
-              <div class="caption">Designed a product site for Letterpest and a mobile site that allows people to upload Letterpress boards and get possible words.</div>
-            </div>
-          </a>
+        <div class="row work"> 
 
           <div class="span3 workThumb">
             <a href="http://311.fm" target="_blank">
@@ -189,36 +205,11 @@
             <div class="caption">Designed an comprehensive dashboard for 311 service requests.</div>
           </div>
 
-          <div class="span3 workThumb"> 
-            <a href="http://spacepong.meteor.com/" target="_blank">
-              <img src="/img/work_thumb_spacepong.png" />
-            </a>              
-            <div class="caption">Designed and helped develop a version of pong in space.</div>
-          </div>
-
-          <div class="span3 workThumb"> 
-            <a href="http://instagram.com/p/W4ul6HjyYK/" target="_blank">
-              <img src="/img/work_thumb_breathe.jpg" />
-            </a>
-            <div class="caption">Designed and made this linocut print.</div>
-          </div>
-
-        </div>
-
-        <div class="row work"> 
-
           <div class="span3 workThumb">  
-            <a href="http://mutini.us/" target="_blank">
-              <img src="/img/work_thumb_mutini.png" />
+            <a href="http://dailybrief.311labs.org/" target="_blank">
+              <img src="/img/work_thumb_dailybrief.png" />
             </a>  
-            <div class="caption">Designed a mobile transit app hackathon and won 2nd place.</div>
-          </div>
-
-          <div class="span3 workThumb"> 
-            <a href="http://codeforamerica.org/" target="_blank">
-              <img src="/img/work_thumb_flag_tag.png" /> 
-            </a>
-            <div class="caption">Designed an icon for Code for America.</div>              
+            <div class="caption">Designed a site that gives a snapshot of service requests geospatially.</div>
           </div>
 
           <div class="span3 workThumb">
@@ -228,23 +219,16 @@
             <div class="caption">Designed the logo for Super Mayor Emmanuel</div>
           </div>
 
-          <div class="span3 workThumb">
-            <a href="http://calcyotip.appspot.com/" target="_blank">
-              <img src="/img/work_thumb_calcyotip.png" />
-            </a>               
-            <div class="caption">Designed and developed this site to learn some Python.</div>
+          <div class="span3 workThumb"> 
+            <a href="http://codeforamerica.org/" target="_blank">
+              <img src="/img/work_thumb_flag_tag.png" /> 
+            </a>
+            <div class="caption">Designed an icon for Code for America.</div>              
           </div>
 
         </div>
 
         <div class="row work"> 
-
-          <div class="span3 workThumb">  
-            <a href="http://dailybrief.311labs.org/" target="_blank">
-              <img src="/img/work_thumb_dailybrief.png" />
-            </a>  
-            <div class="caption">Designed a site that gives a snapshot of service requests geospatially.</div>
-          </div>
 
           <div class="span3 workThumb"> 
             <img src="/img/work_thumb_ideahack.png" />
@@ -259,8 +243,17 @@
           </div>
 
           <div class="span3 workThumb">
-            <img src="/img/work_thumb_meeteeyore.png" />
-            <div class="caption">Designed a site for a Meteor hackathon.</div>                               
+            <a href="http://calcyotip.appspot.com/" target="_blank">
+              <img src="/img/work_thumb_calcyotip.png" />
+            </a>               
+            <div class="caption">Designed and developed this site to learn some Python.</div>
+          </div>
+
+          <div class="span3 workThumb"> 
+            <a href="http://spacepong.meteor.com/" target="_blank">
+              <img src="/img/work_thumb_spacepong.png" />
+            </a>              
+            <div class="caption">Designed and helped develop a version of pong in space.</div>
           </div>
 
         </div>
