Updated some links

--- a/resumes/index.html
+++ b/resumes/index.html
@@ -40,7 +40,7 @@
               <li>
                 <p>I'm a freelance visual/UX designer and sometimes front-end developer trying to figure out what's next for me. I am interested in making products that improve people's lives and make them smile. I believe in living what you love, and that includes my work. I would love to get my creative juices flowing and collaboratively work with a design team focusing on great experiences.</p>
                 <ul class="icons">
-                  <li><a class="icons-print" href="/img/angel_kittiyachavalit_resume_0414.pdf"> &nbsp;PRINTABLE RESUME</a></li>
+                  <li><a class="icons-print" href="/img/angel_kittiyachavalit_resume_0914.pdf"> &nbsp;PRINTABLE RESUME</a></li>
                   <li><a class="icons-portfolio" href="/workingforyou/"> &nbsp;ANGELLOV.ES</a></li>
                   <li><a class="icons-twitter" href="http://twitter.com/angelk" target="_blank"> &nbsp;@ANGELK</a></li>
                   <li><a class="icons-mail" href="mailto:angel.kittiyachavalit@gmail.com"> &nbsp;ANGEL.KITTIYACHAVALIT@GMAIL.COM</a></li>
@@ -76,6 +76,13 @@
                 <h4><a href="http://angellov.es/" target="_blank">Design &amp; Happiness Studio</a>, San Francisco, CA</h4>
                 <p class="when">October 2009 - Present</p>
                 <p>I do graphic design, web and mobile design, UX/UI design, and front-end development for various clients.</p>
+              </li>
+
+              <li>
+                <h3>Interaction Designer</h3>
+                <h4><a href="https://www.altschool.com/" target="_blank">AltSchool</a>, San Francisco, CA</h4>
+                <p class="when">June 2014 - August 2014</p>
+                <p>I worked closely with the product manager, engineers, and UX researchers designing and implementing the teacher workflow. I designed wireframes, performed user testing, designed high fidelity mockups, and helped with implementation.</p>
               </li>
 
               <li>
