--- a/workingforyou/index.html
+++ b/workingforyou/index.html
@@ -157,7 +157,6 @@
           <div class="span4 workdescription">
             <h2>Honolulu Answers</h2>
             <p>Designed a website based on <a href="https://www.gov.uk/" target="_blank">GOV.UK</a> for the city of Honolulu. Since then my design has been redeployed in <a href="http://answers.oaklandnet.com/" target="_blank">Oakland</a> as well and has won an 2013 Interaction Design Award for Connecting. </p>
-            <a href="http://answers.honolulu.gov" target="_blank">View this site live &rarr;</a>
           </div>
           <div class="span8">
             <img src="/img/work_thumb_hnlanswers.png" />
@@ -336,7 +335,7 @@
           <ul class="social unstyled">
             <li><a class="mail" href="mailto:angel.kittiyachavalit@gmail.com"></a></li>
             <li><a class="twitter" href="http://twitter.com/angelk" target="_blank"></a></li>
-            <li><a class="github" href="http://github.com/akit" target="_blank"></a></li>
+            <li><a class="github" href="http://github.com/angel" target="_blank"></a></li>
             <li><a class="linkedin" href="https://www.linkedin.com/in/angelkittiyachavalit" target="_blank"></a></li>
             <li><a class="dribbble" href="http://dribbble.com/angel" target="_blank"></a></li>
             <li><a class="instagram" href="http://instagram/akitkat" target="_blank"></a></li>
