Updated work section of bio

--- a/workingforyou/index.html
+++ b/workingforyou/index.html
@@ -305,6 +305,7 @@
           <div class="span4 offset4">
             <h4>Work</h4>
             <ul>
+              <li>Interaction Designer at <a href="https://www.altschool.com/" target="_blank">AltSchool</a></li>
               <li>Designer in Residence at <a href="http://codeforamerica.org" target="_blank">Code for America</a></li>
               <li>2012 Fellow at <a href="http://codeforamerica.org" target="_blank">Code for America</a></li>
               <li>User Experience Designer at <a href="http://shopittome.com" target="_blank">Shop It To Me</a></li>
