updated skills of bio

--- a/workingforyou/index.html
+++ b/workingforyou/index.html
@@ -319,7 +319,7 @@
             <h4>Education</h4>
             <p>University of California, Berkeley, Economics</p>
             <h4>Skills</h4>
-            <p>Visual design, UI/UX design, Adobe Suite, HTML, CSS, Javascript, rock climbing, photography, laughing, and making name tags.</p>
+            <p>Visual design, UI/UX design, illustration, lettering, Adobe Suite, HTML, CSS, JavaScript, photography, making greeting cards, laughing, and making name tags.</p>
             <p class="button"><a href="/resumes/">View my full resume &rarr;</a></p>
           </div>
 
