--- a/resumes/index.html
+++ b/resumes/index.html
@@ -49,7 +49,7 @@
 
               <li>
                 <h2>Skills</h2>
-                <p>Visual design, UI/UX design, Adobe Suite, HTML, CSS, JavaScript, rock climbing, photography, making greeting cards, laughing, and making name tags.</p>
+                <p>Visual design, UI/UX design, illustration, lettering, Adobe Suite, HTML, CSS, JavaScript, rock climbing, photography, making greeting cards, laughing, and making name tags.</p>
               </li>
 
               <li class="education">
@@ -75,7 +75,7 @@
                 <h3>Freelance Designer</h3>
                 <h4><a href="http://angellov.es/" target="_blank">Design &amp; Happiness Studio</a>, San Francisco, CA</h4>
                 <p class="when">October 2009 - Present</p>
-                <p>I do graphic design, web and mobile design, UX/UI design, and front-end development for various clients.</p>
+                <p>I do graphic design, web and mobile design, UX/UI design, illustration, lettering, and front-end development for various clients.</p>
               </li>
 
               <li>
